Fixed messages being hidden by header

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -13,7 +13,7 @@
   margin-bottom: $spacing-xxl;
   color: $text-light;
   overflow: visible; // Allow dropdown to extend beyond header
-  z-index: 2147483647; // Ensure header and its children are on top
+  z-index: 1;
   
   @media (max-width: 1024px) {
     margin-left: $spacing-md;
